Add homework for first review

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Папки из описания к заданию
+.git/*
+env/
+venv/
+.venv
+.venv/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
